Use separate nodes to handle control and simulation-matters

--- a/coppeliasim_interface/CMakeLists.txt
+++ b/coppeliasim_interface/CMakeLists.txt
@@ -168,16 +168,16 @@ add_definitions (-DDO_NOT_USE_SHARED_MEMORY)
 ## The recommended prefix ensures that target names across packages don't collide
  
 
-add_library(coppeliasim_client src/coppeliasim_client.cpp remoteApi/extApi.c remoteApi/extApiPlatform.c)
-target_link_libraries(coppeliasim_client ${Boost_LIBRARIES})
-target_link_libraries(coppeliasim_client ${catkin_LIBRARIES})
+add_library(hardware_interface src/hardware_interface.cpp remoteApi/extApi.c remoteApi/extApiPlatform.c)
+target_link_libraries(hardware_interface ${Boost_LIBRARIES})
+target_link_libraries(hardware_interface ${catkin_LIBRARIES})
 add_library(simulation_synchronizer src/simulation_synchronizer.cpp remoteApi/extApi.c remoteApi/extApiPlatform.c)
 target_link_libraries(simulation_synchronizer ${Boost_LIBRARIES})
 target_link_libraries(simulation_synchronizer ${catkin_LIBRARIES})
 
 
 add_executable(hardware_interface_node src/hardware_interface_node.cpp)
-target_link_libraries(hardware_interface_node coppeliasim_client)
+target_link_libraries(hardware_interface_node hardware_interface)
 target_link_libraries(hardware_interface_node ${catkin_LIBRARIES})
 
 add_executable(simulation_synchronizer_node src/simulation_synchronizer_node.cpp)
