Save current WIP

--- a/coppeliasim_interface/config/coppelia_config.yaml
+++ b/coppeliasim_interface/config/coppelia_config.yaml
@@ -3,7 +3,9 @@ PORT_simulation_synchronizer: 19997
 PORT_hardware_interface: 19998
 PORT_laser_scanner: 19999
 connection_timeout_ms: 5000
+
 laser_scanner_focus_frame_id: "laser_scanner_focus_frame"
 explicit_sync_list:
   - "/update_hw_interface"
-  - "/laser_scanner_sense"
+  - "/update_hw_interface"
+  - "/laser_scanner_sense" 
