Save fine working version Add stitcher-node to work with CoppeliaSim. However, uncertainty is still not considered properly and subject to implementation.

--- a/coppeliasim_interface/config/coppelia_config.yaml
+++ b/coppeliasim_interface/config/coppelia_config.yaml
@@ -7,5 +7,5 @@ connection_timeout_ms: 5000
 laser_scanner_focus_frame_id: "laser_scanner_focus_frame"
 explicit_sync_list:
   - "/update_hw_interface"
-  - "/update_hw_interface"
-  - "/laser_scanner_sense" 
+#  - "/laser_scanner_sense"
+  - "/perform_laser_scan"
