--- a/fmauch_universal_robot/ur10_e_moveit_config/config/kinematics.yaml
+++ b/fmauch_universal_robot/ur10_e_moveit_config/config/kinematics.yaml
@@ -5,6 +5,7 @@
 #  kinematics_solver_attempts: 3
 manipulator:
   kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
-  kinematics_solver_search_resolution: 0.005
+  solve_type: Speed
   kinematics_solver_timeout: 0.005
-  kinematics_solver_attempts: 10
+# DEPRECATED: kinematics_solver_attempts: 10
+# Not applicable: kinematics_solver_search_resolution: 0.005
