--- a/fmauch_universal_robot/ur10_e_moveit_config/config/ompl_planning.yaml
+++ b/fmauch_universal_robot/ur10_e_moveit_config/config/ompl_planning.yaml
@@ -125,6 +125,14 @@ planner_configs:
   PersistentPRMstar: # reuses roadmap during lifetime of node but doesn't save/load roadmap to/from disk
     type: geometric::PRMstar
     multi_query_planning_enabled: true
+  
+  PersistentPRM: # reuses roadmap during lifetime of node but doesn't save/load roadmap to/from disk
+    type: geometric::PRM
+    multi_query_planning_enabled: true
+  
+  PersistentLazyPRMstar: # reuses roadmap during lifetime of node but doesn't save/load roadmap to/from disk
+    type: geometric::LazyPRMstar
+    multi_query_planning_enabled: true
 
 manipulator:
   default_planner_config: RRTConnectkConfigDefault
