--- a/agiprobot_measurement/config/sensor_model_parameters.yaml
+++ b/agiprobot_measurement/config/sensor_model_parameters.yaml
@@ -1,6 +1,7 @@
 optimal_standoff_mm: 150
+minimum_standoff_mm: 100
+maximum_standoff_mm: 200
 maximum_deviations:
-  z_mm: 50
   theta_rad: 0.78   # Is roughly 45deg
   gamma_rad: 0.78
 beam_taille_diameter_mm: 0.1
