--- a/coppeliasim_interface/doc/coppeliasim_interface_build/latex/Makefile
+++ b/coppeliasim_interface/doc/coppeliasim_interface_build/latex/Makefile
@@ -1,68 +1,21 @@
-# Makefile for Sphinx LaTeX output
+all: refman.pdf
 
-ALLDOCS = $(basename $(wildcard *.tex))
-ALLPDF = $(addsuffix .pdf,$(ALLDOCS))
-ALLDVI = $(addsuffix .dvi,$(ALLDOCS))
-ALLXDV =
-ALLPS  = $(addsuffix .ps,$(ALLDOCS))
-ALLIMGS = $(wildcard *.png *.gif *.jpg *.jpeg)
+pdf: refman.pdf
 
-# Prefix for archive names
-ARCHIVEPREFIX =
-# Additional LaTeX options (passed via variables in latexmkrc/latexmkjarc file)
-export LATEXOPTS =
-# Additional latexmk options
-LATEXMKOPTS =
-# format: pdf or dvi (used only by archive targets)
-FMT = pdf
+refman.pdf: clean refman.tex
+	pdflatex refman
+	makeindex refman.idx
+	pdflatex refman
+	latex_count=8 ; \
+	while egrep -s 'Rerun (LaTeX|to get cross-references right)' refman.log && [ $$latex_count -gt 0 ] ;\
+	    do \
+	      echo "Rerunning latex...." ;\
+	      pdflatex refman ;\
+	      latex_count=`expr $$latex_count - 1` ;\
+	    done
+	makeindex refman.idx
+	pdflatex refman
 
-LATEX = latexmk -dvi
-PDFLATEX = latexmk -pdf -dvi- -ps-
-
-
-%.png %.gif %.jpg %.jpeg: FORCE_MAKE
-	extractbb '$@'
-
-%.dvi: %.tex FORCE_MAKE
-	$(LATEX) $(LATEXMKOPTS) '$<'
-
-%.ps: %.dvi
-	dvips '$<'
-
-%.pdf: %.tex FORCE_MAKE
-	$(PDFLATEX) $(LATEXMKOPTS) '$<'
-
-all: $(ALLPDF)
-
-all-dvi: $(ALLDVI)
-
-all-ps: $(ALLPS)
-
-all-pdf: $(ALLPDF)
-
-zip: all-$(FMT)
-	mkdir $(ARCHIVEPREFIX)docs-$(FMT)
-	cp $(ALLPDF) $(ARCHIVEPREFIX)docs-$(FMT)
-	zip -q -r -9 $(ARCHIVEPREFIX)docs-$(FMT).zip $(ARCHIVEPREFIX)docs-$(FMT)
-	rm -r $(ARCHIVEPREFIX)docs-$(FMT)
-
-tar: all-$(FMT)
-	mkdir $(ARCHIVEPREFIX)docs-$(FMT)
-	cp $(ALLPDF) $(ARCHIVEPREFIX)docs-$(FMT)
-	tar cf $(ARCHIVEPREFIX)docs-$(FMT).tar $(ARCHIVEPREFIX)docs-$(FMT)
-	rm -r $(ARCHIVEPREFIX)docs-$(FMT)
-
-gz: tar
-	gzip -9 < $(ARCHIVEPREFIX)docs-$(FMT).tar > $(ARCHIVEPREFIX)docs-$(FMT).tar.gz
-
-bz2: tar
-	bzip2 -9 -k $(ARCHIVEPREFIX)docs-$(FMT).tar
-
-xz: tar
-	xz -9 -k $(ARCHIVEPREFIX)docs-$(FMT).tar
 
 clean:
-	rm -f *.log *.ind *.aux *.toc *.syn *.idx *.out *.ilg *.pla *.ps *.tar *.tar.gz *.tar.bz2 *.tar.xz $(ALLPDF) $(ALLDVI) $(ALLXDV) *.fls *.fdb_latexmk
-
-.PHONY: all all-pdf all-dvi all-ps clean zip tar gz bz2 xz
-.PHONY: FORCE_MAKE
+	rm -f *.ps *.dvi *.aux *.toc *.idx *.ind *.ilg *.log *.out *.brf *.blg *.bbl refman.pdf
