Add automatic obstacle provider for collision objects

--- a/fmauch_universal_robot/ur10_e_moveit_config/config/fake_controllers.yaml
+++ b/fmauch_universal_robot/ur10_e_moveit_config/config/fake_controllers.yaml
@@ -12,4 +12,6 @@ controller_list:
   - name: fake_endeffector_controller
     joints:
       []
-  
+initial:
+  - group: manipulator
+    pose:  angled
